[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/pauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Kenney Blocks.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 2 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.784314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 200.0
margin_right = -200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 880.0
margin_bottom = 720.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LblGameOver" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 247.0
margin_right = 880.0
margin_bottom = 397.0
custom_fonts/font = SubResource( 1 )
text = "PAUSED"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 401.0
margin_right = 880.0
margin_bottom = 401.0
alignment = 1

[node name="BtnContinue" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 405.0
margin_right = 880.0
margin_bottom = 425.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnRestart" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 429.0
margin_right = 880.0
margin_bottom = 449.0
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnQuit" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 453.0
margin_right = 880.0
margin_bottom = 473.0
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnContinue" to="." method="_on_BtnContinue_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnRestart" to="." method="_on_BtnRestart_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BtnQuit" to="." method="_on_BtnQuit_pressed"]
